# Skalds

./: .env.example  .gitignore  404.html  MANIFEST.in  README.md  dashboard.py  dev.ipynb  index.html  pseudo.txt  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish.yml  quality.yml
Prompt/: index.html
assets/css/: styles.ac548450.css
assets/js/: 0327e470.8028606e.js  0e384e19.32f84749.js  0e384e19.66de364f.js  14eb3368.cf2242e3.js  17896441.f70a2eaf.js  1df93b7f.e4138350.js  1f199170.5df2c571.js  1f199170.bc2b1e16.js  1f199170.fc7aed35.js  244.6081b00c.js  27abbe82.1bfaa576.js  27abbe82.36239717.js  27abbe82.7071791d.js  296021c7.7448f5f3.js  3ebc58f2.438e273a.js  3ebc58f2.c891adf7.js  51a2376f.5a8a12d9.js  51a2376f.e1af8fa1.js  57ee68c5.8de9b2a8.js  59fd3ea6.f14dad21.js  5e95c892.420d14b8.js  61b0b369.6de92566.js  61b0b369.7ced5c90.js  66a74584.13c07ca2.js  66a74584.e6e9d542.js  68074872.46a6960a.js  68074872.e455001d.js  68074872.f9d78bad.js  8070e160.43707d3e.js  8070e160.60acc82b.js  8070e160.f51ac59f.js  8070e160.fe2be948.js  9ccd6c22.02aa359e.js  9ccd6c22.b6d3fdae.js  9ccd6c22.c85b27ef.js  a734bca8.5be88b1c.js  a7456010.6edc1df5.js  a7bd4aaa.89ed765b.js  a94703ab.18dafd32.js  b7499116.b96603dd.js  (+15 more)
dashboard/: .env.example  BUILD_SPEC.md  README.md  SETUP.md  TECHNICAL_SPEC.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: ErrorBoundary.tsx
dashboard/src/contexts/: SSEContext.tsx
dashboard/src/types/: index.ts
docs/documents/: index.html
docs/documents/all/: index.html
docs/documents/cache_memory/: index.html
docs/documents/event_queue/: index.html
docs/documents/skald/: index.html
docs/documents/system_controller/: index.html
docs/documents/task_lifecycle/: index.html
docs/documents/task_worker/: index.html
docs/documents/yaml_config/: index.html
docs/env_setup/: index.html
docs/examples/: index.html
docs/examples/single_task_worker_with_skald_node/: index.html
docs/intro/: index.html
docs/quickstart/: index.html
examples/: README.md
ref_code/: skald_monitor.py  skald_store.py  task_monitor.py  task_store.py
skald/: __init__.py  skald.py
skald/cache/: __init__.py
skald/common/: __init__.py
skald/config/: _enum.py  skald_config.py  system_controller_config.py  systemconfig.py
skald/controller/: __init__.py
skald/event/: __init__.py
skald/generator/: __init__.py
skald/handler/: survive.py
skald/model/: event.py  task.py
skald/proxy/: kafka.py  mongo.py  redis.py
skald/repository/: repository.py
skald/store/: __init__.py  taskworker.py
skald/system_controller/: API.md  DEPLOYMENT.md  README.md  __init__.py  main.py
skald/test_controller/: __init__.py
skald/utils/: logging.py
skald/worker/: __init__.py  baseclass.py  factory.py  manager.py
skalds/: __init__.py  skald.py
skalds/proxy/: mongo.py
skalds/repository/: repository.py
skalds/system_controller/: API.md  DEPLOYMENT.md  README.md
tests/: __init__.py
tests/manual/: all_workers.yml  complex_worker.py  dashboard.py  docker-compose.yml  edge_with_worker.py  kafka_command.ipynb  my_worker.py  node_with_worker.py  simple_edge.py  test_summary_logic.py  test_summary_service.py  test_task_monitor_init.py
tests/test_cache/: __init__.py
tests/test_controller/: __init__.py
tests/test_event/: __init__.py
tests/test_generator/: __init__.py
tests/test_storage/: __init__.py
tests/test_worker/: __init__.py
tests/unit/: test_dynamic_basemodel.py  test_task.py
website/: TODO.md  docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: documents.md  env_setup.md  intro.md  quickstart.md
website/docs/documents/: skald.md  (+5 more)
(+80 files in other folders)
