[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skald"
version = "0.1.0"
description = "An event-driven, modular distributed task scheduling and execution system."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "JiHungLin" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing"
]
dependencies = [
    "pydantic>=2.5.0",
    "kafka-python==2.2.7",
    "redis==6.1.0",
    "pymongo==4.4.1",
    "pretty-loguru>=1.1.2",
]


[project.urls]
"Homepage" = "https://github.com/yourusername/skald"
"Bug Tracker" = "https://github.com/yourusername/skald/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    ]

[tool.black]
line-length = 88
target-version = ['py311']